Trying to fix fon-sizes on mobile

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -251,6 +251,7 @@ section {
 		.highlight {
 			overflow-x: auto;
 			width: 100%;
+			font-size: 1em;
 			code {
 				background-color: inherit;
 				padding: inherit;
